// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapContainer should render 1`] = `
<div
  className="c-map-page"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="qa-map"
    style={Object {}}
  >
    <div
      className="c-map c-map--drawing-mode-none qa-map-container"
    >
      <Connect(LeafletContainer)
        getLeafletInstance={[Function]}
      />
      <ToggleFullscreen
        isFullscreen={false}
        onToggleFullscreen={[Function]}
      />
      <Connect(MapPanelContainer)
        isMapPanelVisible={true}
      />
    </div>
  </div>
</div>
`;

exports[`MapContainer should render with drawingmode: draw 1`] = `
<div
  className="c-map-page"
  style={
    Object {
      "height": "100%",
    }
  }
>
  <div
    className="qa-map"
    style={Object {}}
  >
    <div
      className="c-map c-map--drawing-mode-draw qa-map-container"
    >
      <Connect(LeafletContainer)
        getLeafletInstance={[Function]}
      />
      <ToggleFullscreen
        isFullscreen={false}
        onToggleFullscreen={[Function]}
      />
      <Connect(MapPanelContainer)
        isMapPanelVisible={true}
      />
    </div>
  </div>
</div>
`;
